@@ -40,7 +40,7 @@ session)."
   (after! magit     (setq magit-completing-read-function #'ivy-completing-read))
   (after! yasnippet (push #'+ivy-yas-prompt yas-prompt-functions))
 
-  (add-hook 'emacs-startup-hook #'ivy-mode)
+  (add-hook 'doom-init-hook #'ivy-mode)
 
   (map! :map ivy-mode-map
         [remap apropos]                   #'counsel-apropos
