@@ -8,7 +8,7 @@
     (when theme
       (mapc #'disable-theme custom-enabled-themes))
     (load "doom-themes-common.el" nil t)
-    (load-theme theme t)
+    (+doom|init)
     (+doom|refresh-bright-buffers)))
 
 ;;;###autoload
