@@ -2,5 +2,5 @@
 
 (setq-default debug-on-error nil)
 
-(run-hooks 'after-init-hook 'emacs-startup-hook 'window-setup-hook)
+(run-hooks 'emacs-startup-hook)
 (ert-run-tests-batch-and-exit)
